opam-version: "2.0"
name: "lambda"
version: "0.1.7"
synopsis: "Lambda calculus library"
description: """
Lambda calculus library for OCaml. Modules documentation is 
available at https://dakk.github.io/lambda/
"""
maintainer: "Davide Gessa <gessadavide@gmail.com>"
authors: [
  "Davide Gessa <gessadavide@gmail.com>"
]

homepage: "https://github.com/dakk/lambda"
bug-reports: "https://github.com/dakk/lambda/issues"
license: "MIT"
dev-repo: "git+https://github.com/dakk/lambda.git"
build: ["dune" "build" "-p" name "-j" jobs]

depends: [
  "ocaml" {>= "4.05.0"}
  
  "dune" {build & >= "1.6.0"}
  "menhir" {>= "20200211"}

  "ounit" {with-test & >= "2.0.8"}
  "odoc" {with-test & >= "1.3.0"}
]

depexts: [
]

